--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ uvicorn~=0.23.2
 fastapi~=0.100.1
 starlette~=0.27.0
 pydantic~=2.1.1
-websockets~=11.0.3
-aioredis
-redis
+aioredis~=2.0.1
+redis~=4.6.0
 
+
+tortoise~=0.1.1
